test/src/e2e_vm_tests/test_programs/should_fail/illegal_use_of_generic/src/main.sw
library;

pub fn test_function<T>(_value: T) {
    T::new(); // 1.
}

struct Data<T> {
    value: T
}

impl<T> Data<T> {
    fn test_function(self) {
        T::new(); // 2.
    }
}
